After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785137 - "File conflict" dialog misses mnemonics, loses focus when tabbing through invisible fields
"File conflict" dialog misses mnemonics, loses focus when tabbing through inv...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.24.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-19 16:54 UTC by André Klapper
Modified: 2017-08-17 13:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (2.57 KB, patch)
2017-07-31 10:30 UTC, Martin Bříza
none Details | Review
Proposed patch 2 (1018 bytes, patch)
2017-07-31 10:56 UTC, Martin Bříza
committed Details | Review

Description André Klapper 2017-07-19 16:54:22 UTC
* Copy some files from A to B.
* Now copy again the same files from A to B.
* Nautilus 3.24.1 shows a "File Conflict" dialog.
* Realize that for unknown reasons, "> Select a new name for the destination" is highlighted. But pressing the Enter key triggers the "Replace" button instead.
* Now press "Tab" one or two times. Where the hell are you?

Tabbing obviously focuses the non-visible parts of the "new name" dropdown. 
This is superconfusing and it took me several tries to understand where my focus is, why "Apply this action to all files and folders" was suddenly disabled, and why the button in the top bar changed to "Rename" so I canceled and started copying from scratch again. Not very productive.

Also there is neither a mnemonic for "Apply this action to all files and folders" nor a mnemonic for the "Replace" button. Together with the tab problem I had to switch to using a mouse.
Comment 1 Martin Bříza 2017-07-31 10:30:05 UTC
Created attachment 356629 [details] [review]
Proposed patch

Hello,
this is a proposed patch to solve the problem with the keyboard focus. I'll add a patch for the mnemonics in a minute.
It may be a bit hacky but I couldn't think of a better solution. Oh and this was created as a part of the newcomer workshop at GUADEC 2017 and this is my first code for GNOME so it may not be up to the standards.
Comment 2 Martin Bříza 2017-07-31 10:56:55 UTC
Created attachment 356634 [details] [review]
Proposed patch 2

This patch adds a mnemonic (P) to the Replace button.

Adding one to the Reset button breaks it (the underscore gets rendered instead of being handled as a mnemonic) and it's hard to choose a letter to be used as a shortcut.
Comment 3 Carlos Soriano 2017-08-07 08:57:34 UTC
Review of attachment 356634 [details] [review]:

Looks good, thanks Martin!