file-conflict-dialog: Add a mnemonic to the Replace button

https://bugzilla.gnome.org/show_bug.cgi?id=785137